# HCCC_Infra

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: build_image.yml  rust.yml
backend/: .env
backend/src/: database.rs  lib.rs  response.rs
backend/src/entities/: submit.rs
backend/src/repositories/: submit.rs
backend/templates/: home.html
judge_container/: Cargo.toml  Dockerfile
judge_container/src/: main.rs  run_test.rs
judge_container/testcase/: case1.json  case2.json  case3.json
judge_env/: Cargo.toml  Dockerfile
judge_env/src/: main.rs
judge_server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  docker-compose.yaml
judge_server/scripts/: init.sql
judge_server/src/: database.rs  lib.rs  main.rs
judge_server/src/controllers/: root.rs  submit.rs
judge_server/src/entities/: problem.rs  submit.rs  testcase.rs
judge_server/src/repos_impl/: problem.rs  submit.rs  testcase.rs
judge_server/src/repositories/: problem.rs  submit.rs  testcase.rs
judge_server/src/services/: submit.rs
judge_system/: Cargo.toml  Dockerfile
judge_system/src/: main.rs  run_test.rs
judge_system/testcase/: 1.case
local_env/: Dockerfile
scripts/: init.sql
test_runner/: Cargo.toml  Dockerfile  riscv.Dockerfile
test_runner/src/: arch.rs  main.rs  run_test.rs
web_server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md
web_server/src/: database.rs  lib.rs  main.rs  request.rs
web_server/src/controllers/: accounts.rs  problems.rs  root.rs  submissions.rs  submit.rs  submits.rs  users.rs
web_server/src/entities/: account.rs  problem.rs  ranking.rs  submission.rs  submit.rs  user.rs  users.rs
web_server/src/repos_impl/: accounts.rs  problems.rs  submissions.rs  submit.rs  user.rs  users.rs
web_server/src/repositories/: accounts.rs  problem.rs  submissions.rs  users.rs
web_server/src/services/: accounts.rs  problems.rs  ranking.rs  submissions.rs  submit.rs  submits.rs  user.rs  users.rs
web_server/src/views/: home.rs  sign_in.rs  sign_up.rs
web_server/src/views/partial/: submit.rs
web_server/templates/: _submit.html  base.html  home.html  sign_in.html  sign_up.html
