[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
x8664 = []
riscv = []

[dependencies]
tokio = { version = "1.21.2", features=["full"] }
clap = {version = "3.0.5", features=["cargo"]}
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
base64 = "0.13.1"
