[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
axum = { version = "0.5.16", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version="0.3.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
async-once-cell = "0.4.2"
async-session = "3"
async-sqlx-session = { version = "0.4.0", features = ["pg", "async_std"] }
base64 = "0.13.1"
